src/objects/Survey_Appointment_Company_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AssignTo_User__c</fullName>
        <label>AssignTo User</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Postal_Code__c</fullName>
        <label>Company Postal Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Subject__c</fullName>
        <label>Event Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reachable_Time_in_Seconds__c</fullName>
        <label>Reachable Time in Seconds</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Appointment Company Setting</label>
</CustomObject>